# CIFAR-10-with-CNN

./: .gitignore  9896_CNN4_CIFAR_10_Convnext.ipynb  CNN4_CIFAR_10.ipynb  CNN4_CIFAR_10_Original.ipynb  pyproject.toml
CNN4_ConvNeXt/: CNN4_CIFAR_10_ConvNeXt.ipynb
CNN4_ConvNeXt_baseline/: CNN4_CIFAR_10_ConvNeXt_baseline.ipynb
CNN4_Convnext/: CNN4_CIFAR_10_Convnext.ipynb  CNN4_CIFAR_10_Convnext_report_en.md  CNN4_CIFAR_10_Convnext_report_zh.md
CNN4_Original/: CNN4_CIFAR_10_Original.ipynb
CNN4_RegNetY400m/: CNN4_CIFAR_10_RegNetY400m.ipynb
CNN4_RegNetY400m_FFT/: CNN4_CIFAR_10_RegNetY400m_FFT.ipynb
CNN4_RegNetY400m_baseline/: CNN4_CIFAR_10_RegNetY400m_baseline.ipynb
Result/: 9694_CNN4_CIFAR_10_RegNetY400m.ipynb
